[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Labidahrom <labidahrom@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = ">=7"
ipython = "7.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"
